[gd_scene load_steps=7 format=3 uid="uid://bju0tiico5sq3"]

[ext_resource type="Script" path="res://src/scene/testscene/TestScene.gd" id="1_lasw0"]
[ext_resource type="PackedScene" uid="uid://kv05b8vy1bgr" path="res://src/game/spaceship/Spaceship.tscn" id="2_g2bgv"]
[ext_resource type="Texture2D" uid="uid://pjtvdnyblc7d" path="res://assets/ui/darkpixelrpg/buttons/square/button_arrow_left.png" id="3_d4bw5"]
[ext_resource type="Texture2D" uid="uid://dun4llbklmvdj" path="res://assets/ui/darkpixelrpg/buttons/square/button_arrow_left_pressed.png" id="4_7yyl1"]
[ext_resource type="Texture2D" uid="uid://ckag2bqi51gjg" path="res://assets/ui/darkpixelrpg/buttons/square/button_arrow_right.png" id="5_xft6j"]
[ext_resource type="Texture2D" uid="uid://dhhe7pywud1kx" path="res://assets/ui/darkpixelrpg/buttons/square/button_arrow_right_pressed.png" id="6_o3wta"]

[node name="Test" type="Node2D"]
script = ExtResource("1_lasw0")

[node name="Spaceship" parent="." instance=ExtResource("2_g2bgv")]
position = Vector2(576, 1280)

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 2048.0

[node name="PlusATKSPDButton" type="TextureButton" parent="Control"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -224.0
offset_right = 128.0
offset_bottom = -160.0
texture_normal = ExtResource("3_d4bw5")
texture_pressed = ExtResource("4_7yyl1")
stretch_mode = 5

[node name="MinusATKSPDButton" type="TextureButton" parent="Control"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = -224.0
offset_right = 224.0
offset_bottom = -160.0
texture_normal = ExtResource("5_xft6j")
texture_pressed = ExtResource("6_o3wta")
stretch_mode = 5

[node name="PlusProjectileButton" type="TextureButton" parent="Control"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = -64.0
texture_normal = ExtResource("3_d4bw5")
texture_pressed = ExtResource("4_7yyl1")
stretch_mode = 5

[node name="MinusProjectileButton" type="TextureButton" parent="Control"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = -128.0
offset_right = 224.0
offset_bottom = -64.0
texture_normal = ExtResource("5_xft6j")
texture_pressed = ExtResource("6_o3wta")
stretch_mode = 5

[node name="BackButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_d4bw5")
texture_pressed = ExtResource("4_7yyl1")
stretch_mode = 5

[connection signal="pressed" from="Control/PlusATKSPDButton" to="." method="_on_PlusATKSPDButton_pressed"]
[connection signal="pressed" from="Control/MinusATKSPDButton" to="." method="_on_MinusATKSPDButton_pressed"]
[connection signal="pressed" from="Control/PlusProjectileButton" to="." method="_on_PlusProjectileButton_pressed"]
[connection signal="pressed" from="Control/MinusProjectileButton" to="." method="_on_MinusProjectileButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
